// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignUp [NEGATIVE] should render with a invalid data 1`] = `
.c26 {
  position: absolute;
  will-change: opacity,transform;
  border-radius: 50%;
  -webkit-animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  z-index: 0;
  pointer-events: none;
}

.c24 {
  position: relative;
  z-index: 0;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  width: 100%;
  white-space: nowrap;
  padding: 0;
  overflow: hidden;
  -webkit-transition-duration: 400ms;
  transition-duration: 400ms;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  height: 3rem;
  border: none;
  background-color: #4475E3;
}

.c24 > div {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 600;
  font-style: normal;
}

.c24 > div svg {
  margin-right: 0.25rem;
}

.c24 > div {
  color: #FFFFFF;
}

.c24 > div svg {
  fill: #FFFFFF;
}

.c24:hover:enabled {
  background-color: #2F65E0;
}

.c24:disabled {
  background-color: #B3C6F1;
}

.c24:focus-visible:enabled {
  border: 0.125rem solid #FFFFFF;
  background-color: #4475E3;
  outline: 0.125rem solid #C7D6F7;
}

.c25 {
  position: relative;
  z-index: 2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transform: translate3d(0,0,0.0625rem);
  -ms-transform: translate3d(0,0,0.0625rem);
  transform: translate3d(0,0,0.0625rem);
}

.c19 {
  display: inline-grid;
  gap: 0.25rem;
  grid-template-columns: 2.5rem 1fr;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  cursor: unset !important;
}

.c22 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #838383;
  -webkit-transition: color 300ms cubic-bezier(0.45,0.05,0,1);
  transition: color 300ms cubic-bezier(0.45,0.05,0,1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.c21 {
  width: 2.5rem;
  height: 2.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c18 {
  display: inline-block;
}

.c18 input {
  display: none;
}

.c18 .c20 > svg > :nth-child(1) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  fill: #DBDBDB;
}

.c18 .c20 > svg > :nth-child(2) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
}

.c12 > svg {
  position: relative;
  bottom: 2.6875rem;
  left: calc(100% - 0.5rem);
}

.c13 > svg {
  position: relative;
  bottom: 2.6875rem;
  left: calc(100% - 2rem);
}

.c11 {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  box-sizing: border-box;
  height: 3.5rem;
  width: 100%;
  margin: 0;
  padding: 1rem;
  background-color: #F7F8FA;
  border: 0.0625rem solid #F7F8FA;
  border-radius: 0.25rem;
  -webkit-transition: border 300ms cubic-bezier(0.45,0.05,0,1);
  transition: border 300ms cubic-bezier(0.45,0.05,0,1);
  caret-color: #4475E3;
}

.c11:hover:enabled {
  border-color: #2F65E0;
}

.c11:active:enabled,
.c11:focus-visible {
  outline: none;
  border-color: #4475E3;
}

.c11:disabled {
  color: rgba(0,0,0,0.38);
  border-color: transparent;
  background-color: #f8f8f8;
}

.c11::-webkit-input-placeholder {
  color: #808080;
}

.c11::-moz-placeholder {
  color: #808080;
}

.c11:-ms-input-placeholder {
  color: #808080;
}

.c11::placeholder {
  color: #808080;
}

.c11:disabled::-webkit-input-placeholder {
  color: #DBDBDB;
}

.c11:disabled::-moz-placeholder {
  color: #DBDBDB;
}

.c11:disabled:-ms-input-placeholder {
  color: #DBDBDB;
}

.c11:disabled::placeholder {
  color: #DBDBDB;
}

.c11:-webkit-autofill,
.c11:-webkit-autofill:hover,
.c11:-webkit-autofill:focus {
  border: 0.0625rem solid #4475E3;
  -webkit-transition: background-color 5000s ease-in-out 0s;
  transition: background-color 5000s ease-in-out 0s;
  background-color: #F7F8FA !important;
  background-image: unset !important;
  -webkit-text-fill-color: #838383;
}

.c11:-webkit-autofill:focus {
  border-color: #4475E3;
}

.c9 {
  max-height: 3.5rem;
}

.c9:hover .c10:enabled {
  border-color: #2F65E0;
}

.c8 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  gap: 0.5rem;
  height: 1.125rem;
}

.c14 {
  background: none;
  border: none;
  padding: 0;
  height: 1.5rem;
  width: 1.5rem;
}

.c14 svg {
  fill: #4475E3;
}

.c14:active,
.c14:enabled:hover {
  cursor: pointer;
}

.c14:active svg,
.c14:enabled:hover svg {
  fill: #4475E3;
}

.c14:disabled svg {
  fill: #DBDBDB;
}

.c15 {
  position: relative;
  bottom: 2.6875rem;
  left: calc(100% - 2rem);
}

.c15:hover {
  cursor: pointer;
}

.c29 {
  position: relative;
  height: 0;
  width: 100%;
  pointer-events: none;
}

.c28 {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  -webkit-user-drag: none;
}

.c28:hover {
  cursor: pointer;
}

.c1 {
  color: #474747;
  min-width: 45.8125rem;
  width: 55.556vw;
  min-height: 44.037265625rem;
  height: 53.403205vw;
  max-height: 90vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: auto;
  background-color: #FFFFFF;
  box-shadow: 0 0 0.125rem 0rem rgba(0,0,0,0.15);
  border-radius: 0.25rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c16 {
  margin-top: 0.875rem;
  margin-bottom: 1.625rem;
}

.c17 {
  height: 2.5rem;
}

.c17 * {
  cursor: default;
}

.c23 {
  font-family: Inter,sans-serif;
  font-size: 0.75rem;
  line-height: 1.125rem;
  font-weight: 400;
  font-style: normal;
  color: #838383;
}

.c4 {
  font-family: Inter,sans-serif;
  font-size: 2rem;
  line-height: 2.625rem;
  font-weight: 600;
  font-style: normal;
  margin: 1rem auto 0.5rem;
  text-align: center;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  width: 28rem;
  margin: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 1rem;
}

.c5 {
  margin: 0 auto 2.25rem;
}

.c6 {
  margin-top: 0.1875rem;
  margin-bottom: 0.625rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  row-gap: 1.0625rem;
}

.c27 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  margin-top: 0.5rem;
}

.c27 a {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 600;
  font-style: normal;
  color: #4475E3;
  display: inline-block;
  margin-left: 0.5rem;
}

@media (max-height:44rem) {
  .c0 {
    overflow-y: scroll;
  }
}

@media (max-width:45.75rem) {
  .c0 {
    overflow-x: scroll;
  }
}

<div
  class="c0"
  data-testid="auth-signup"
>
  <div
    class="c1"
    width="55.556"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4 c5"
        >
          Create account
        </div>
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            <div
              class="c8"
              data-testid="input-description"
            >
              Email
            </div>
            <div
              class="c9"
            >
              <input
                class="c10 c11"
                data-testid="auth-signup-email"
                maxlength="256"
                name="email"
                placeholder="Enter email"
                type="email"
                value=""
              />
              <div
                class="c12"
              />
            </div>
          </div>
          <div
            class="c7"
          >
            <div
              class="c8"
              data-testid="input-description"
            >
              Name
            </div>
            <div
              class="c9"
            >
              <input
                class="c10 c11"
                data-testid="auth-signup-name"
                maxlength="30"
                name="name"
                placeholder="Enter name"
                type="text"
                value=""
              />
              <div
                class="c12"
              />
            </div>
          </div>
          <div
            class="c7"
          >
            <div
              class="c8"
              data-testid="input-description"
            >
              Password
            </div>
            <div
              class="c9"
            >
              <input
                class="c10 c11"
                data-testid="auth-signup-password"
                maxlength="256"
                name="password"
                placeholder="Enter password"
                type="password"
                value=""
              />
              <div
                class="c13"
              >
                <button
                  aria-label="Show Password"
                  class="c14 c15"
                  color="primary"
                >
                  <svg
                    data-testid="icon"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c16"
        >
          <div
            class="c17"
          >
            <div
              class="c18 "
              color="disabled"
              disabled=""
              kind="success"
              readonly=""
            >
              <label
                class="c19"
                for="1"
                kind="success"
              >
                <div
                  class="c20 c21"
                >
                  <svg />
                </div>
                <div
                  class="c22"
                  disabled=""
                >
                  <span
                    class="c23"
                  >
                    Be at least 12 characters in length
                  </span>
                </div>
              </label>
              <input
                checked=""
                data-testid="auth-signup-radio"
                disabled=""
                id="1"
                readonly=""
                type="checkbox"
              />
            </div>
          </div>
          <div
            class="c17"
          >
            <div
              class="c18 "
              color="disabled"
              disabled=""
              kind="success"
              readonly=""
            >
              <label
                class="c19"
                for="2"
                kind="success"
              >
                <div
                  class="c20 c21"
                >
                  <svg />
                </div>
                <div
                  class="c22"
                  disabled=""
                >
                  <span
                    class="c23"
                  >
                    Contains 1 upper case, 1 lower case, 1 number, and 1 special character
                  </span>
                </div>
              </label>
              <input
                checked=""
                data-testid="auth-signup-radio"
                disabled=""
                id="2"
                readonly=""
                type="checkbox"
              />
            </div>
          </div>
          <div
            class="c17"
          >
            <div
              class="c18 "
              color="disabled"
              disabled=""
              kind="success"
              readonly=""
            >
              <label
                class="c19"
                for="3"
                kind="success"
              >
                <div
                  class="c20 c21"
                >
                  <svg />
                </div>
                <div
                  class="c22"
                  disabled=""
                >
                  <span
                    class="c23"
                  >
                    Does not contain more than 3 identical characters in a row
                  </span>
                </div>
              </label>
              <input
                checked=""
                data-testid="auth-signup-radio"
                disabled=""
                id="3"
                readonly=""
                type="checkbox"
              />
            </div>
          </div>
          <div
            class="c17"
          >
            <div
              class="c18 "
              color="disabled"
              disabled=""
              kind="success"
              readonly=""
            >
              <label
                class="c19"
                for="4"
                kind="success"
              >
                <div
                  class="c20 c21"
                >
                  <svg />
                </div>
                <div
                  class="c22"
                  disabled=""
                >
                  <span
                    class="c23"
                  >
                    Does not contain username
                  </span>
                </div>
              </label>
              <input
                checked=""
                data-testid="auth-signup-radio"
                disabled=""
                id="4"
                readonly=""
                type="checkbox"
              />
            </div>
          </div>
        </div>
        <button
          class="c24"
          data-testid="auth-signup-create"
          disabled=""
          fill="solid"
          style="overflow: hidden; position: relative;"
        >
          <div
            class="c25"
            data-testid="content"
          >
            Create Account
          </div>
          <div
            class="c26"
            color="primaryPressed"
            opacity="1,1"
            scale="0"
            style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
          />
        </button>
        <div
          class="c27"
        >
          Already have an account?
          <a
            class="c28"
            href="/signin"
          >
            Sign in
          </a>
        </div>
      </div>
      <div
        class="c29"
      />
    </div>
  </div>
</div>
`;

exports[`SignUp [NEGATIVE] should render with a invalid data 2`] = `
.c32 {
  position: absolute;
  will-change: opacity,transform;
  border-radius: 50%;
  -webkit-animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  z-index: 0;
  pointer-events: none;
}

.c30 {
  position: relative;
  z-index: 0;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  width: 100%;
  white-space: nowrap;
  padding: 0;
  overflow: hidden;
  -webkit-transition-duration: 400ms;
  transition-duration: 400ms;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  height: 3rem;
  border: none;
  background-color: #4475E3;
}

.c30 > div {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 600;
  font-style: normal;
}

.c30 > div svg {
  margin-right: 0.25rem;
}

.c30 > div {
  color: #FFFFFF;
}

.c30 > div svg {
  fill: #FFFFFF;
}

.c30:hover:enabled {
  background-color: #2F65E0;
}

.c30:disabled {
  background-color: #B3C6F1;
}

.c30:focus-visible:enabled {
  border: 0.125rem solid #FFFFFF;
  background-color: #4475E3;
  outline: 0.125rem solid #C7D6F7;
}

.c31 {
  position: relative;
  z-index: 2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transform: translate3d(0,0,0.0625rem);
  -ms-transform: translate3d(0,0,0.0625rem);
  transform: translate3d(0,0,0.0625rem);
}

.c23 {
  display: inline-grid;
  gap: 0.25rem;
  grid-template-columns: 2.5rem 1fr;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  cursor: unset !important;
}

.c26 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  -webkit-transition: color 300ms cubic-bezier(0.45,0.05,0,1);
  transition: color 300ms cubic-bezier(0.45,0.05,0,1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.c25 {
  width: 2.5rem;
  height: 2.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c36 .c24 > svg > :nth-child(1) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  fill: #DBDBDB;
}

.c36 .c24 > svg > :nth-child(2) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
}

.c21 {
  display: inline-block;
}

.c21 input {
  display: none;
}

.c21 .c24 > svg > :nth-child(1) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  fill: #FF3333;
}

.c21 .c24 > svg > :nth-child(2) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
}

.c21:hover > .c22 {
  cursor: pointer;
}

.c28 {
  display: inline-block;
}

.c28 input {
  display: none;
}

.c28 .c24 > svg > :nth-child(1) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  fill: #2DC008;
}

.c28 .c24 > svg > :nth-child(2) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
}

.c28:hover > .c22 {
  cursor: pointer;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
}

.c12 > svg {
  position: relative;
  bottom: 2.6875rem;
  left: calc(100% - 0.5rem);
}

.c16 > svg {
  position: relative;
  bottom: 2.6875rem;
  left: calc(100% - 2rem);
}

.c11 {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  box-sizing: border-box;
  height: 3.5rem;
  width: 100%;
  margin: 0;
  padding: 1rem;
  background-color: #F7F8FA;
  border: 0.0625rem solid #F7F8FA;
  border-radius: 0.25rem;
  -webkit-transition: border 300ms cubic-bezier(0.45,0.05,0,1);
  transition: border 300ms cubic-bezier(0.45,0.05,0,1);
  caret-color: #4475E3;
}

.c11:hover:enabled {
  border-color: #2F65E0;
}

.c11:active:enabled,
.c11:focus-visible {
  outline: none;
  border-color: #4475E3;
}

.c11:disabled {
  color: rgba(0,0,0,0.38);
  border-color: transparent;
  background-color: #f8f8f8;
}

.c11::-webkit-input-placeholder {
  color: #808080;
}

.c11::-moz-placeholder {
  color: #808080;
}

.c11:-ms-input-placeholder {
  color: #808080;
}

.c11::placeholder {
  color: #808080;
}

.c11:disabled::-webkit-input-placeholder {
  color: #DBDBDB;
}

.c11:disabled::-moz-placeholder {
  color: #DBDBDB;
}

.c11:disabled:-ms-input-placeholder {
  color: #DBDBDB;
}

.c11:disabled::placeholder {
  color: #DBDBDB;
}

.c11:-webkit-autofill,
.c11:-webkit-autofill:hover,
.c11:-webkit-autofill:focus {
  border: 0.0625rem solid #4475E3;
  -webkit-transition: background-color 5000s ease-in-out 0s;
  transition: background-color 5000s ease-in-out 0s;
  background-color: #F7F8FA !important;
  background-image: unset !important;
  -webkit-text-fill-color: #838383;
}

.c11:-webkit-autofill:focus {
  border-color: #4475E3;
}

.c15 {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  font-style: normal;
  color: #D14343;
  box-sizing: border-box;
  height: 3.5rem;
  width: 100%;
  margin: 0;
  padding: 1rem;
  background-color: #FFEBEB;
  border: 0.0625rem solid #FFEBEB;
  border-radius: 0.25rem;
  -webkit-transition: border 300ms cubic-bezier(0.45,0.05,0,1);
  transition: border 300ms cubic-bezier(0.45,0.05,0,1);
  caret-color: #D14343;
}

.c15:hover:enabled {
  border-color: transparent;
}

.c15:active:enabled,
.c15:focus-visible {
  outline: none;
  border-color: transparent;
}

.c15:disabled {
  color: rgba(0,0,0,0.38);
  border-color: transparent;
  background-color: #f8f8f8;
}

.c15::-webkit-input-placeholder {
  color: #808080;
}

.c15::-moz-placeholder {
  color: #808080;
}

.c15:-ms-input-placeholder {
  color: #808080;
}

.c15::placeholder {
  color: #808080;
}

.c15:disabled::-webkit-input-placeholder {
  color: #DBDBDB;
}

.c15:disabled::-moz-placeholder {
  color: #DBDBDB;
}

.c15:disabled:-ms-input-placeholder {
  color: #DBDBDB;
}

.c15:disabled::placeholder {
  color: #DBDBDB;
}

.c15:-webkit-autofill,
.c15:-webkit-autofill:hover,
.c15:-webkit-autofill:focus {
  border: 0.0625rem solid #FFEBEB;
  -webkit-transition: background-color 5000s ease-in-out 0s;
  transition: background-color 5000s ease-in-out 0s;
  background-color: #FFEBEB !important;
  background-image: unset !important;
  -webkit-text-fill-color: #838383;
}

.c15:-webkit-autofill:focus {
  border-color: transparent;
}

.c9 {
  max-height: 3.5rem;
}

.c9:hover .c10:enabled {
  border-color: #2F65E0;
}

.c14 {
  max-height: 3.5rem;
}

.c14:hover .c10:enabled {
  border-color: transparent;
}

.c8 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  gap: 0.5rem;
  height: 1.125rem;
}

.c13 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #D14343;
  gap: 0.5rem;
  height: 1.125rem;
}

.c17 {
  background: none;
  border: none;
  padding: 0;
  height: 1.5rem;
  width: 1.5rem;
}

.c17 svg {
  fill: #D14343;
}

.c17:active,
.c17:enabled:hover {
  cursor: pointer;
}

.c17:active svg,
.c17:enabled:hover svg {
  fill: #D14343;
}

.c17:disabled svg {
  fill: #DBDBDB;
}

.c18 {
  position: relative;
  bottom: 2.6875rem;
  left: calc(100% - 2rem);
}

.c18:hover {
  cursor: pointer;
}

.c35 {
  position: relative;
  height: 0;
  width: 100%;
  pointer-events: none;
}

.c34 {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  -webkit-user-drag: none;
}

.c34:hover {
  cursor: pointer;
}

.c1 {
  color: #474747;
  min-width: 45.8125rem;
  width: 55.556vw;
  min-height: 44.037265625rem;
  height: 53.403205vw;
  max-height: 90vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: auto;
  background-color: #FFFFFF;
  box-shadow: 0 0 0.125rem 0rem rgba(0,0,0,0.15);
  border-radius: 0.25rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c19 {
  margin-top: 0.875rem;
  margin-bottom: 1.625rem;
}

.c20 {
  height: 2.5rem;
}

.c20 * {
  cursor: default;
}

.c27 {
  font-family: Inter,sans-serif;
  font-size: 0.75rem;
  line-height: 1.125rem;
  font-weight: 400;
  font-style: normal;
  color: #838383;
}

.c29 {
  font-family: Inter,sans-serif;
  font-size: 0.75rem;
  line-height: 1.125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
}

.c4 {
  font-family: Inter,sans-serif;
  font-size: 2rem;
  line-height: 2.625rem;
  font-weight: 600;
  font-style: normal;
  margin: 1rem auto 0.5rem;
  text-align: center;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  width: 28rem;
  margin: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 1rem;
}

.c5 {
  margin: 0 auto 2.25rem;
}

.c6 {
  margin-top: 0.1875rem;
  margin-bottom: 0.625rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  row-gap: 1.0625rem;
}

.c33 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  margin-top: 0.5rem;
}

.c33 a {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 600;
  font-style: normal;
  color: #4475E3;
  display: inline-block;
  margin-left: 0.5rem;
}

@media (max-height:44rem) {
  .c0 {
    overflow-y: scroll;
  }
}

@media (max-width:45.75rem) {
  .c0 {
    overflow-x: scroll;
  }
}

<div
  class="c0"
  data-testid="auth-signup"
>
  <div
    class="c1"
    width="55.556"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4 c5"
        >
          Create account
        </div>
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            <div
              class="c8"
              data-testid="input-description"
            >
              Email
            </div>
            <div
              class="c9"
            >
              <input
                class="c10 c11"
                data-testid="auth-signup-email"
                maxlength="256"
                name="email"
                placeholder="Enter email"
                type="email"
                value="email@samsung.com"
              />
              <div
                class="c12"
              />
            </div>
          </div>
          <div
            class="c7"
          >
            <div
              class="c8"
              data-testid="input-description"
            >
              Name
            </div>
            <div
              class="c9"
            >
              <input
                class="c10 c11"
                data-testid="auth-signup-name"
                maxlength="30"
                name="name"
                placeholder="Enter name"
                type="text"
                value="username"
              />
              <div
                class="c12"
              />
            </div>
          </div>
          <div
            class="c7"
          >
            <div
              class="c13"
              data-testid="input-description"
            >
              Password
            </div>
            <div
              class="c14"
            >
              <input
                class="c10 c15"
                data-testid="auth-signup-password"
                maxlength="256"
                name="password"
                placeholder="Enter password"
                type="password"
                value="username"
              />
              <div
                class="c16"
              >
                <button
                  aria-label="Show Password"
                  class="c17 c18"
                  color="statusErrorText"
                >
                  <svg
                    data-testid="icon"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c19"
        >
          <div
            class="c20"
          >
            <div
              class="c21 "
              color="disabled"
              kind="error"
              readonly=""
            >
              <label
                class="c22 c23"
                for="1"
                kind="error"
              >
                <div
                  class="c24 c25"
                >
                  <svg />
                </div>
                <div
                  class="c26"
                >
                  <span
                    class="c27"
                  >
                    Be at least 12 characters in length
                  </span>
                </div>
              </label>
              <input
                checked=""
                data-testid="auth-signup-radio"
                id="1"
                readonly=""
                type="checkbox"
              />
            </div>
          </div>
          <div
            class="c20"
          >
            <div
              class="c21 "
              color="disabled"
              kind="error"
              readonly=""
            >
              <label
                class="c22 c23"
                for="2"
                kind="error"
              >
                <div
                  class="c24 c25"
                >
                  <svg />
                </div>
                <div
                  class="c26"
                >
                  <span
                    class="c27"
                  >
                    Contains 1 upper case, 1 lower case, 1 number, and 1 special character
                  </span>
                </div>
              </label>
              <input
                checked=""
                data-testid="auth-signup-radio"
                id="2"
                readonly=""
                type="checkbox"
              />
            </div>
          </div>
          <div
            class="c20"
          >
            <div
              class="c28 "
              color="statusSuccess"
              kind="success"
              readonly=""
            >
              <label
                class="c22 c23"
                for="3"
                kind="success"
              >
                <div
                  class="c24 c25"
                >
                  <svg />
                </div>
                <div
                  class="c26"
                >
                  <span
                    class="c29"
                  >
                    Does not contain more than 3 identical characters in a row
                  </span>
                </div>
              </label>
              <input
                checked=""
                data-testid="auth-signup-radio"
                id="3"
                readonly=""
                type="checkbox"
              />
            </div>
          </div>
          <div
            class="c20"
          >
            <div
              class="c21 "
              color="disabled"
              kind="error"
              readonly=""
            >
              <label
                class="c22 c23"
                for="4"
                kind="error"
              >
                <div
                  class="c24 c25"
                >
                  <svg />
                </div>
                <div
                  class="c26"
                >
                  <span
                    class="c27"
                  >
                    Does not contain username
                  </span>
                </div>
              </label>
              <input
                checked=""
                data-testid="auth-signup-radio"
                id="4"
                readonly=""
                type="checkbox"
              />
            </div>
          </div>
        </div>
        <button
          class="c30"
          data-testid="auth-signup-create"
          disabled=""
          fill="solid"
          style="overflow: hidden; position: relative;"
        >
          <div
            class="c31"
            data-testid="content"
          >
            Create Account
          </div>
          <div
            class="c32"
            color="primaryPressed"
            opacity="1,1"
            scale="0"
            style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
          />
        </button>
        <div
          class="c33"
        >
          Already have an account?
          <a
            class="c34"
            href="/signin"
          >
            Sign in
          </a>
        </div>
      </div>
      <div
        class="c35"
      />
    </div>
  </div>
</div>
`;

exports[`SignUp should render 1`] = `
.c26 {
  position: absolute;
  will-change: opacity,transform;
  border-radius: 50%;
  -webkit-animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  z-index: 0;
  pointer-events: none;
}

.c24 {
  position: relative;
  z-index: 0;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  width: 100%;
  white-space: nowrap;
  padding: 0;
  overflow: hidden;
  -webkit-transition-duration: 400ms;
  transition-duration: 400ms;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  height: 3rem;
  border: none;
  background-color: #4475E3;
}

.c24 > div {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 600;
  font-style: normal;
}

.c24 > div svg {
  margin-right: 0.25rem;
}

.c24 > div {
  color: #FFFFFF;
}

.c24 > div svg {
  fill: #FFFFFF;
}

.c24:hover:enabled {
  background-color: #2F65E0;
}

.c24:disabled {
  background-color: #B3C6F1;
}

.c24:focus-visible:enabled {
  border: 0.125rem solid #FFFFFF;
  background-color: #4475E3;
  outline: 0.125rem solid #C7D6F7;
}

.c25 {
  position: relative;
  z-index: 2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transform: translate3d(0,0,0.0625rem);
  -ms-transform: translate3d(0,0,0.0625rem);
  transform: translate3d(0,0,0.0625rem);
}

.c19 {
  display: inline-grid;
  gap: 0.25rem;
  grid-template-columns: 2.5rem 1fr;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  cursor: unset !important;
}

.c22 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #838383;
  -webkit-transition: color 300ms cubic-bezier(0.45,0.05,0,1);
  transition: color 300ms cubic-bezier(0.45,0.05,0,1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.c21 {
  width: 2.5rem;
  height: 2.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c18 {
  display: inline-block;
}

.c18 input {
  display: none;
}

.c18 .c20 > svg > :nth-child(1) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  fill: #DBDBDB;
}

.c18 .c20 > svg > :nth-child(2) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
}

.c12 > svg {
  position: relative;
  bottom: 2.6875rem;
  left: calc(100% - 0.5rem);
}

.c13 > svg {
  position: relative;
  bottom: 2.6875rem;
  left: calc(100% - 2rem);
}

.c11 {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  box-sizing: border-box;
  height: 3.5rem;
  width: 100%;
  margin: 0;
  padding: 1rem;
  background-color: #F7F8FA;
  border: 0.0625rem solid #F7F8FA;
  border-radius: 0.25rem;
  -webkit-transition: border 300ms cubic-bezier(0.45,0.05,0,1);
  transition: border 300ms cubic-bezier(0.45,0.05,0,1);
  caret-color: #4475E3;
}

.c11:hover:enabled {
  border-color: #2F65E0;
}

.c11:active:enabled,
.c11:focus-visible {
  outline: none;
  border-color: #4475E3;
}

.c11:disabled {
  color: rgba(0,0,0,0.38);
  border-color: transparent;
  background-color: #f8f8f8;
}

.c11::-webkit-input-placeholder {
  color: #808080;
}

.c11::-moz-placeholder {
  color: #808080;
}

.c11:-ms-input-placeholder {
  color: #808080;
}

.c11::placeholder {
  color: #808080;
}

.c11:disabled::-webkit-input-placeholder {
  color: #DBDBDB;
}

.c11:disabled::-moz-placeholder {
  color: #DBDBDB;
}

.c11:disabled:-ms-input-placeholder {
  color: #DBDBDB;
}

.c11:disabled::placeholder {
  color: #DBDBDB;
}

.c11:-webkit-autofill,
.c11:-webkit-autofill:hover,
.c11:-webkit-autofill:focus {
  border: 0.0625rem solid #4475E3;
  -webkit-transition: background-color 5000s ease-in-out 0s;
  transition: background-color 5000s ease-in-out 0s;
  background-color: #F7F8FA !important;
  background-image: unset !important;
  -webkit-text-fill-color: #838383;
}

.c11:-webkit-autofill:focus {
  border-color: #4475E3;
}

.c9 {
  max-height: 3.5rem;
}

.c9:hover .c10:enabled {
  border-color: #2F65E0;
}

.c8 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  gap: 0.5rem;
  height: 1.125rem;
}

.c14 {
  background: none;
  border: none;
  padding: 0;
  height: 1.5rem;
  width: 1.5rem;
}

.c14 svg {
  fill: #4475E3;
}

.c14:active,
.c14:enabled:hover {
  cursor: pointer;
}

.c14:active svg,
.c14:enabled:hover svg {
  fill: #4475E3;
}

.c14:disabled svg {
  fill: #DBDBDB;
}

.c15 {
  position: relative;
  bottom: 2.6875rem;
  left: calc(100% - 2rem);
}

.c15:hover {
  cursor: pointer;
}

.c29 {
  position: relative;
  height: 0;
  width: 100%;
  pointer-events: none;
}

.c28 {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  -webkit-user-drag: none;
}

.c28:hover {
  cursor: pointer;
}

.c1 {
  color: #474747;
  min-width: 45.8125rem;
  width: 55.556vw;
  min-height: 44.037265625rem;
  height: 53.403205vw;
  max-height: 90vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: auto;
  background-color: #FFFFFF;
  box-shadow: 0 0 0.125rem 0rem rgba(0,0,0,0.15);
  border-radius: 0.25rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c16 {
  margin-top: 0.875rem;
  margin-bottom: 1.625rem;
}

.c17 {
  height: 2.5rem;
}

.c17 * {
  cursor: default;
}

.c23 {
  font-family: Inter,sans-serif;
  font-size: 0.75rem;
  line-height: 1.125rem;
  font-weight: 400;
  font-style: normal;
  color: #838383;
}

.c4 {
  font-family: Inter,sans-serif;
  font-size: 2rem;
  line-height: 2.625rem;
  font-weight: 600;
  font-style: normal;
  margin: 1rem auto 0.5rem;
  text-align: center;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  width: 28rem;
  margin: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 1rem;
}

.c5 {
  margin: 0 auto 2.25rem;
}

.c6 {
  margin-top: 0.1875rem;
  margin-bottom: 0.625rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  row-gap: 1.0625rem;
}

.c27 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  margin-top: 0.5rem;
}

.c27 a {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 600;
  font-style: normal;
  color: #4475E3;
  display: inline-block;
  margin-left: 0.5rem;
}

@media (max-height:44rem) {
  .c0 {
    overflow-y: scroll;
  }
}

@media (max-width:45.75rem) {
  .c0 {
    overflow-x: scroll;
  }
}

<div
  class="c0"
  data-testid="auth-signup"
>
  <div
    class="c1"
    width="55.556"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4 c5"
        >
          Create account
        </div>
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            <div
              class="c8"
              data-testid="input-description"
            >
              Email
            </div>
            <div
              class="c9"
            >
              <input
                class="c10 c11"
                data-testid="auth-signup-email"
                maxlength="256"
                name="email"
                placeholder="Enter email"
                type="email"
                value=""
              />
              <div
                class="c12"
              />
            </div>
          </div>
          <div
            class="c7"
          >
            <div
              class="c8"
              data-testid="input-description"
            >
              Name
            </div>
            <div
              class="c9"
            >
              <input
                class="c10 c11"
                data-testid="auth-signup-name"
                maxlength="30"
                name="name"
                placeholder="Enter name"
                type="text"
                value=""
              />
              <div
                class="c12"
              />
            </div>
          </div>
          <div
            class="c7"
          >
            <div
              class="c8"
              data-testid="input-description"
            >
              Password
            </div>
            <div
              class="c9"
            >
              <input
                class="c10 c11"
                data-testid="auth-signup-password"
                maxlength="256"
                name="password"
                placeholder="Enter password"
                type="password"
                value=""
              />
              <div
                class="c13"
              >
                <button
                  aria-label="Show Password"
                  class="c14 c15"
                  color="primary"
                >
                  <svg
                    data-testid="icon"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c16"
        >
          <div
            class="c17"
          >
            <div
              class="c18 "
              color="disabled"
              disabled=""
              kind="success"
              readonly=""
            >
              <label
                class="c19"
                for="1"
                kind="success"
              >
                <div
                  class="c20 c21"
                >
                  <svg />
                </div>
                <div
                  class="c22"
                  disabled=""
                >
                  <span
                    class="c23"
                  >
                    Be at least 12 characters in length
                  </span>
                </div>
              </label>
              <input
                checked=""
                data-testid="auth-signup-radio"
                disabled=""
                id="1"
                readonly=""
                type="checkbox"
              />
            </div>
          </div>
          <div
            class="c17"
          >
            <div
              class="c18 "
              color="disabled"
              disabled=""
              kind="success"
              readonly=""
            >
              <label
                class="c19"
                for="2"
                kind="success"
              >
                <div
                  class="c20 c21"
                >
                  <svg />
                </div>
                <div
                  class="c22"
                  disabled=""
                >
                  <span
                    class="c23"
                  >
                    Contains 1 upper case, 1 lower case, 1 number, and 1 special character
                  </span>
                </div>
              </label>
              <input
                checked=""
                data-testid="auth-signup-radio"
                disabled=""
                id="2"
                readonly=""
                type="checkbox"
              />
            </div>
          </div>
          <div
            class="c17"
          >
            <div
              class="c18 "
              color="disabled"
              disabled=""
              kind="success"
              readonly=""
            >
              <label
                class="c19"
                for="3"
                kind="success"
              >
                <div
                  class="c20 c21"
                >
                  <svg />
                </div>
                <div
                  class="c22"
                  disabled=""
                >
                  <span
                    class="c23"
                  >
                    Does not contain more than 3 identical characters in a row
                  </span>
                </div>
              </label>
              <input
                checked=""
                data-testid="auth-signup-radio"
                disabled=""
                id="3"
                readonly=""
                type="checkbox"
              />
            </div>
          </div>
          <div
            class="c17"
          >
            <div
              class="c18 "
              color="disabled"
              disabled=""
              kind="success"
              readonly=""
            >
              <label
                class="c19"
                for="4"
                kind="success"
              >
                <div
                  class="c20 c21"
                >
                  <svg />
                </div>
                <div
                  class="c22"
                  disabled=""
                >
                  <span
                    class="c23"
                  >
                    Does not contain username
                  </span>
                </div>
              </label>
              <input
                checked=""
                data-testid="auth-signup-radio"
                disabled=""
                id="4"
                readonly=""
                type="checkbox"
              />
            </div>
          </div>
        </div>
        <button
          class="c24"
          data-testid="auth-signup-create"
          disabled=""
          fill="solid"
          style="overflow: hidden; position: relative;"
        >
          <div
            class="c25"
            data-testid="content"
          >
            Create Account
          </div>
          <div
            class="c26"
            color="primaryPressed"
            opacity="1,1"
            scale="0"
            style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
          />
        </button>
        <div
          class="c27"
        >
          Already have an account?
          <a
            class="c28"
            href="/signin"
          >
            Sign in
          </a>
        </div>
      </div>
      <div
        class="c29"
      />
    </div>
  </div>
</div>
`;

exports[`SignUp should render 2`] = `
.c27 {
  position: absolute;
  will-change: opacity,transform;
  border-radius: 50%;
  -webkit-animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  z-index: 0;
  pointer-events: none;
}

.c25 {
  position: relative;
  z-index: 0;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  width: 100%;
  white-space: nowrap;
  padding: 0;
  overflow: hidden;
  -webkit-transition-duration: 400ms;
  transition-duration: 400ms;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  height: 3rem;
  border: none;
  background-color: #4475E3;
}

.c25:hover {
  cursor: pointer;
}

.c25 > div {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 600;
  font-style: normal;
}

.c25 > div svg {
  margin-right: 0.25rem;
}

.c25 > div {
  color: #FFFFFF;
}

.c25 > div svg {
  fill: #FFFFFF;
}

.c25:hover:enabled {
  background-color: #2F65E0;
}

.c25:disabled {
  background-color: #B3C6F1;
}

.c25:focus-visible:enabled {
  border: 0.125rem solid #FFFFFF;
  background-color: #4475E3;
  outline: 0.125rem solid #C7D6F7;
}

.c26 {
  position: relative;
  z-index: 2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transform: translate3d(0,0,0.0625rem);
  -ms-transform: translate3d(0,0,0.0625rem);
  transform: translate3d(0,0,0.0625rem);
}

.c20 {
  display: inline-grid;
  gap: 0.25rem;
  grid-template-columns: 2.5rem 1fr;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  cursor: unset !important;
}

.c23 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  -webkit-transition: color 300ms cubic-bezier(0.45,0.05,0,1);
  transition: color 300ms cubic-bezier(0.45,0.05,0,1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.c22 {
  width: 2.5rem;
  height: 2.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c32 .c21 > svg > :nth-child(1) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  fill: #DBDBDB;
}

.c32 .c21 > svg > :nth-child(2) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
}

.c33 .c21 > svg > :nth-child(1) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  fill: #FF3333;
}

.c33 .c21 > svg > :nth-child(2) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
}

.c33:hover > .c19 {
  cursor: pointer;
}

.c18 {
  display: inline-block;
}

.c18 input {
  display: none;
}

.c18 .c21 > svg > :nth-child(1) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  fill: #2DC008;
}

.c18 .c21 > svg > :nth-child(2) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
}

.c18:hover > .c19 {
  cursor: pointer;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
}

.c12 > svg {
  position: relative;
  bottom: 2.6875rem;
  left: calc(100% - 0.5rem);
}

.c13 > svg {
  position: relative;
  bottom: 2.6875rem;
  left: calc(100% - 2rem);
}

.c11 {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  box-sizing: border-box;
  height: 3.5rem;
  width: 100%;
  margin: 0;
  padding: 1rem;
  background-color: #F7F8FA;
  border: 0.0625rem solid #F7F8FA;
  border-radius: 0.25rem;
  -webkit-transition: border 300ms cubic-bezier(0.45,0.05,0,1);
  transition: border 300ms cubic-bezier(0.45,0.05,0,1);
  caret-color: #4475E3;
}

.c11:hover:enabled {
  border-color: #2F65E0;
}

.c11:active:enabled,
.c11:focus-visible {
  outline: none;
  border-color: #4475E3;
}

.c11:disabled {
  color: rgba(0,0,0,0.38);
  border-color: transparent;
  background-color: #f8f8f8;
}

.c11::-webkit-input-placeholder {
  color: #808080;
}

.c11::-moz-placeholder {
  color: #808080;
}

.c11:-ms-input-placeholder {
  color: #808080;
}

.c11::placeholder {
  color: #808080;
}

.c11:disabled::-webkit-input-placeholder {
  color: #DBDBDB;
}

.c11:disabled::-moz-placeholder {
  color: #DBDBDB;
}

.c11:disabled:-ms-input-placeholder {
  color: #DBDBDB;
}

.c11:disabled::placeholder {
  color: #DBDBDB;
}

.c11:-webkit-autofill,
.c11:-webkit-autofill:hover,
.c11:-webkit-autofill:focus {
  border: 0.0625rem solid #4475E3;
  -webkit-transition: background-color 5000s ease-in-out 0s;
  transition: background-color 5000s ease-in-out 0s;
  background-color: #F7F8FA !important;
  background-image: unset !important;
  -webkit-text-fill-color: #838383;
}

.c11:-webkit-autofill:focus {
  border-color: #4475E3;
}

.c9 {
  max-height: 3.5rem;
}

.c9:hover .c10:enabled {
  border-color: #2F65E0;
}

.c31:hover .c10:enabled {
  border-color: transparent;
}

.c8 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  gap: 0.5rem;
  height: 1.125rem;
}

.c14 {
  background: none;
  border: none;
  padding: 0;
  height: 1.5rem;
  width: 1.5rem;
}

.c14 svg {
  fill: #4475E3;
}

.c14:active,
.c14:enabled:hover {
  cursor: pointer;
}

.c14:active svg,
.c14:enabled:hover svg {
  fill: #4475E3;
}

.c14:disabled svg {
  fill: #DBDBDB;
}

.c15 {
  position: relative;
  bottom: 2.6875rem;
  left: calc(100% - 2rem);
}

.c15:hover {
  cursor: pointer;
}

.c30 {
  position: relative;
  height: 0;
  width: 100%;
  pointer-events: none;
}

.c29 {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  -webkit-user-drag: none;
}

.c29:hover {
  cursor: pointer;
}

.c1 {
  color: #474747;
  min-width: 45.8125rem;
  width: 55.556vw;
  min-height: 44.037265625rem;
  height: 53.403205vw;
  max-height: 90vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: auto;
  background-color: #FFFFFF;
  box-shadow: 0 0 0.125rem 0rem rgba(0,0,0,0.15);
  border-radius: 0.25rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c16 {
  margin-top: 0.875rem;
  margin-bottom: 1.625rem;
}

.c17 {
  height: 2.5rem;
}

.c17 * {
  cursor: default;
}

.c24 {
  font-family: Inter,sans-serif;
  font-size: 0.75rem;
  line-height: 1.125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
}

.c4 {
  font-family: Inter,sans-serif;
  font-size: 2rem;
  line-height: 2.625rem;
  font-weight: 600;
  font-style: normal;
  margin: 1rem auto 0.5rem;
  text-align: center;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  width: 28rem;
  margin: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 1rem;
}

.c5 {
  margin: 0 auto 2.25rem;
}

.c6 {
  margin-top: 0.1875rem;
  margin-bottom: 0.625rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  row-gap: 1.0625rem;
}

.c28 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  margin-top: 0.5rem;
}

.c28 a {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 600;
  font-style: normal;
  color: #4475E3;
  display: inline-block;
  margin-left: 0.5rem;
}

@media (max-height:44rem) {
  .c0 {
    overflow-y: scroll;
  }
}

@media (max-width:45.75rem) {
  .c0 {
    overflow-x: scroll;
  }
}

<div
  class="c0"
  data-testid="auth-signup"
>
  <div
    class="c1"
    width="55.556"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4 c5"
        >
          Create account
        </div>
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            <div
              class="c8"
              data-testid="input-description"
            >
              Email
            </div>
            <div
              class="c9"
            >
              <input
                class="c10 c11"
                data-testid="auth-signup-email"
                maxlength="256"
                name="email"
                placeholder="Enter email"
                type="email"
                value="email@samsung.com"
              />
              <div
                class="c12"
              />
            </div>
          </div>
          <div
            class="c7"
          >
            <div
              class="c8"
              data-testid="input-description"
            >
              Name
            </div>
            <div
              class="c9"
            >
              <input
                class="c10 c11"
                data-testid="auth-signup-name"
                maxlength="30"
                name="name"
                placeholder="Enter name"
                type="text"
                value="username"
              />
              <div
                class="c12"
              />
            </div>
          </div>
          <div
            class="c7"
          >
            <div
              class="c8"
              data-testid="input-description"
            >
              Password
            </div>
            <div
              class="c9"
            >
              <input
                class="c10 c11"
                data-testid="auth-signup-password"
                maxlength="256"
                name="password"
                placeholder="Enter password"
                type="password"
                value="qweQWE123!@#"
              />
              <div
                class="c13"
              >
                <button
                  aria-label="Show Password"
                  class="c14 c15"
                  color="primary"
                >
                  <svg
                    data-testid="icon"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c16"
        >
          <div
            class="c17"
          >
            <div
              class="c18 "
              color="statusSuccess"
              kind="success"
              readonly=""
            >
              <label
                class="c19 c20"
                for="1"
                kind="success"
              >
                <div
                  class="c21 c22"
                >
                  <svg />
                </div>
                <div
                  class="c23"
                >
                  <span
                    class="c24"
                  >
                    Be at least 12 characters in length
                  </span>
                </div>
              </label>
              <input
                checked=""
                data-testid="auth-signup-radio"
                id="1"
                readonly=""
                type="checkbox"
              />
            </div>
          </div>
          <div
            class="c17"
          >
            <div
              class="c18 "
              color="statusSuccess"
              kind="success"
              readonly=""
            >
              <label
                class="c19 c20"
                for="2"
                kind="success"
              >
                <div
                  class="c21 c22"
                >
                  <svg />
                </div>
                <div
                  class="c23"
                >
                  <span
                    class="c24"
                  >
                    Contains 1 upper case, 1 lower case, 1 number, and 1 special character
                  </span>
                </div>
              </label>
              <input
                checked=""
                data-testid="auth-signup-radio"
                id="2"
                readonly=""
                type="checkbox"
              />
            </div>
          </div>
          <div
            class="c17"
          >
            <div
              class="c18 "
              color="statusSuccess"
              kind="success"
              readonly=""
            >
              <label
                class="c19 c20"
                for="3"
                kind="success"
              >
                <div
                  class="c21 c22"
                >
                  <svg />
                </div>
                <div
                  class="c23"
                >
                  <span
                    class="c24"
                  >
                    Does not contain more than 3 identical characters in a row
                  </span>
                </div>
              </label>
              <input
                checked=""
                data-testid="auth-signup-radio"
                id="3"
                readonly=""
                type="checkbox"
              />
            </div>
          </div>
          <div
            class="c17"
          >
            <div
              class="c18 "
              color="statusSuccess"
              kind="success"
              readonly=""
            >
              <label
                class="c19 c20"
                for="4"
                kind="success"
              >
                <div
                  class="c21 c22"
                >
                  <svg />
                </div>
                <div
                  class="c23"
                >
                  <span
                    class="c24"
                  >
                    Does not contain username
                  </span>
                </div>
              </label>
              <input
                checked=""
                data-testid="auth-signup-radio"
                id="4"
                readonly=""
                type="checkbox"
              />
            </div>
          </div>
        </div>
        <button
          class="c25"
          data-testid="auth-signup-create"
          fill="solid"
          style="overflow: hidden; position: relative;"
        >
          <div
            class="c26"
            data-testid="content"
          >
            Create Account
          </div>
          <div
            class="c27"
            color="primaryPressed"
            opacity="1,1"
            scale="0"
            style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
          />
        </button>
        <div
          class="c28"
        >
          Already have an account?
          <a
            class="c29"
            href="/signin"
          >
            Sign in
          </a>
        </div>
      </div>
      <div
        class="c30"
      />
    </div>
  </div>
</div>
`;
